# Medienprojekt

./: .gitattributes  .gitignore  CMakeLists.txt
Source/: BodyFactory.cpp  BodyFactory.h  CMakeLists.txt  ContactListener.cpp  ContactListener.h  EntityFactory.cpp  EntityFactory.cpp.orig  EntityFactory.h  EntityLayer.cpp  EntityLayer.h  Game.cpp  Game.cpp.orig  Game.h  Game.h.orig  GameConstants.cpp  GameConstants.h  GameGlobals.h  LayerManager.cpp  LayerManager.h  Main.cpp  Main.cpp.orig  Main.h  Menu.cpp  Menu.h  MusicSystem.cpp  PhysixSystem.cpp  PhysixSystem.h  SFMLDebugDraw.cpp  SFMLDebugDraw.h  Settings.cpp  Settings.h  debugrender.cpp  debugrender.h
Source/AI/: AIUtil.cpp  AIUtil.h  AIVisualizer.cpp  AIVisualizer.h  Action.h  Behavior.h  Flee.cpp  Flee.h  FollowPath.cpp  FollowPath.h  Graph.cpp  Graph.h  GraphNode.h  KickBomb.cpp  KickBomb.h  MoveTo.cpp  MoveTo.h  PlaceBomb.cpp  SimulationGraph.cpp  UseSkill.cpp
Source/AI/Actions/: Action.cpp  Action.h  ActionSelector.cpp  ActionSelector.h  ActionType.h  AttackEnemy.cpp  AttackEnemy.h  BlinkAction.cpp  BlinkAction.h  GetSafe.cpp  GetSafe.h
Source/AI/Behaviors/: Behavior.h  DoNothing.h  FollowPath.cpp  FollowPath.h  MoveTo.cpp  MoveTo.h  PlaceBomb.cpp  PlaceBomb.h  PunchBomb.cpp  PunchBomb.h  ThrowBomb.cpp  ThrowBomb.h  UseDirectionSkill.cpp  UseDirectionSkill.h  UseSkill.cpp  UseSkill.h
Source/AI/Checks/: AIUtil.cpp  AIUtil.h  IsSafePath.cpp  IsSafePath.h
Source/AI/PathFinding/: AIPath.cpp  AIPath.h  Graph.cpp  Graph.h  GraphNode.h  NodePathInfo.cpp  NodePathInfo.h  PathEngine.cpp  PathEngine.h  SimulationGraph.cpp  SimulationGraph.h
Source/AI/PathRatings/: PathRating.h  RateAttackEnemy.cpp  RateAttackEnemy.h  RateBlink.cpp  RateBlink.h  RateBlinkToSafety.cpp  RateBlinkToSafety.h  RateCombination.cpp  RateCombination.h  RateDesperateSaveAttempt.cpp  RateDesperateSaveAttempt.h  RateDestroyBlockSpot.cpp  RateDestroyBlockSpot.h  RateDistanceToAffectedBlocks.cpp  RateDistanceToAffectedBlocks.h  RateDistanceToItems.cpp  RateDistanceToItems.h  RateEscape.cpp  RateEscape.h  RateItem.cpp  RateItem.h  RateKickBomb.cpp  RateKickBomb.h  RatePortalSpot.cpp  RatePortalSpot.h  RatePunchBomb.cpp  RatePunchBomb.h  RateRiskySafety.cpp  RateRiskySafety.h  RateSafety.cpp  RateSafety.h  RateThrowBomb.cpp  RateThrowBomb.h  RateTrapDanger.cpp  RateTrapDanger.h
Source/AI/Personality/: AIPersonality.cpp  AIPersonality.h
Source/Animation/: AnimationState.h  AnimationType.h  Animator.cpp  Animator.h  AnimatorManager.cpp  AnimatorManager.h  IdleState.cpp  IdleState.h  WalkingState.cpp  WalkingState.h
Source/Animation/States/: AnimationState.h  IdleState.cpp  IdleState.h  WalkingState.cpp
Source/Components/: AIComponent.h  AfterimageComponent.h  AnimationComponent.h  BlinkComponent.h  BlockComponent.h  BodyComponent.h  BombComponent.h  CellComponent.h  ColorComponent.h  DamageDealerComponent.h  DestructionComponent.h  DestructionDelayComponent.h  DirectionComponent.h  DynamicComponent.h  EffectComponent.h  ExplosionComponent.h  ExplosionStopComponent.h  FloorComponent.h  FreeSlotComponent.h  GLRenderComponent.h  GLRenderRequestComponent.h  HealthComponent.h  HoldingComponent.h  InputComponent.h  InventoryComponent.h  ItemComponent.h  ItemSpawnerComponent.h  JumpComponent.h  LavaComponent.h  LayerComponent.h  LightComponent.h  LinkComponent.h  LocalInputComponent.h  MarkedLavaSpotComponent.h  NoNetComponent.h  OwnerComponent.h  ParticleComponent.h  PlayerComponent.h  PortalComponent.h  PortalMarkerComponent.h  (+8 more)
Source/Events/: BombCreatedEvent.h  BombExplodedEvent.h  BombLandedOnEntityEvent.h  BoostEffectCreatedEvent.h  ChatEvent.h  ClientStateEvent.h  ConnectEvent.h  ConnectionStateEvent.h  CountdownEvent.h  CreateGameEvent.h  CreateLocalGameEvent.h  CreatePortalEvent.h  CreateServerEvent.h  DeathEvent.h  DisconnectEvent.h  EntityGotHitEvent.h  ExitEvent.h  ExplosionCreatedEvent.h  ForceDisconnectEvent.h  GameOverEvent.h  HoldingEvent.h  ItemCreatedEvent.h  ItemPickedUpEvent.h  JoinGameEvent.h  JoinServerEvent.h  JumpEvent.h  LavaCreatedEvent.h  LavaSpotMarkedEvent.h  LobbyEvent.h  MenuShowEvent.h  MusicEvent.h  Phase2StartedEvent.h  PlayerJoinEvent.h  PortalCreatedEvent.h  PreloadEvent.h  PunchEvent.h  ReadyEvent.h  ResetGameEvent.h  SendChatEvent.h  SetReadyEvent.h  (+6 more)
Source/Graphics/: EmitterManager.cpp  EmitterManager.h  Particle.h  ParticleEffects.cpp  ParticleEffects.h  ParticleEmitter.cpp  ParticleEmitter.h  ParticleManager.cpp  ParticleManager.h  ParticleSpawnSystem.cpp  ParticleSpawnSystem.h
Source/Graphics/OpenGL/: Camera.cpp  Camera.h  GLShaderManager.cpp  GLShaderManager.h  GeometryGenerator.cpp  GeometryGenerator.h  Mesh.h  MeshManager.cpp  (+4 more)
Source/Lighting/: Light.cpp  Light.h
Source/Menu/: Menu.cpp  Menu.h  MenuPage.cpp  MenuPage.h
Source/NetCode/: Connection.h  Message.h
Source/Network/: NetClient.cpp  NetClient.h  NetConstants.h  NetPlayerInfo.h  NetServer.cpp  NetServer.h
Source/Systems/: AISystem.cpp  AISystem.h  AfterimageSystem.cpp  AfterimageSystem.h  AnimationSystem.cpp  AnimationSystem.h  BlinkSystem.cpp  BlinkSystem.h  BodySystem.cpp  BodySystem.h  BombKickSystem.cpp  BombKickSystem.h  BombSystem.cpp  BombSystem.h  ChatRenderSystem.cpp  ChatRenderSystem.h  DamageSystem.cpp  DamageSystem.h  DeathSystem.cpp  DeathSystem.h  DestructionSystem.cpp  DestructionSystem.h  DynamicPredictionSystem.cpp  DynamicPredictionSystem.h  ExplosionSystem.cpp  ExplosionSystem.h  GLRenderSystem.cpp  GLRenderSystem.h  HealthSystem.cpp  HealthSystem.h  HoldingSystem.cpp  HoldingSystem.h  InputHandleSystem.cpp  InputHandleSystem.h  InputSystem.cpp  InputSystem.h  InventorySystem.cpp  InventorySystem.h  ItemSystem.cpp  ItemSystem.h  (+25 more)
Source/Utils/: ActiveQueue.h  AssetLoader.h  Colors.cpp  Colors.h  Common.cpp  Common.h  Exceptions.h  FpsCalculator.cpp  FpsCalculator.h  Functions.h  InputManager.cpp  InputManager.h  LevelGenerator.cpp  LevelGenerator.h  Math.cpp  Math.h  Random.cpp  Random.h  ShaderManager.cpp  ShaderManager.h  Shaders.cpp  SystemUtils.cpp  SystemUtils.h  TextureLoader.cpp  TextureLoader.h  make_unique.h
(+91 files in other folders)
